# cargo-verctl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: cargo_verctl.rs  lib.rs  main.rs
tests/: cargo_verctl_unit.rs
tests/crates/simple/: Cargo.toml
tests/workspaces/simple/: Cargo.toml
tests/workspaces/simple/a/: Cargo.toml
tests/workspaces/simple/b/: Cargo.toml
